--- a/index.html
+++ b/index.html
@@ -8,23 +8,34 @@
 </head>
 <body>
   <header>
-    <h1 contenteditable="true">Your Main Headline Here</h1>
-    <h2 contenteditable="true">Your Subheadline Goes Here</h2>
+    <h1 contenteditable="true">Unlock YouTube Growth</h1>
+    <h2 contenteditable="true">Improve your YouTube stats by 50% while spending 30% of the Time you Spend now</h2>
     <div class="about-us-label" contenteditable="true">About US</div>
   </header>
-  <main>
-    <section class="about-section">
-      <img src="images/about1.jpg" alt="About Section 1 Image" class="about-img" />
-      <div class="about-text" contenteditable="true">
-        <h3>About Section 1</h3>
-        <p>Edit this text to describe your first about section. You can write about your team, mission, or anything relevant.</p>
-      </div>
-    </section>
+   </section>
     <section class="about-section">
       <img src="images/about2.jpg" alt="About Section 2 Image" class="about-img" />
       <div class="about-text" contenteditable="true">
-        <h3>About Section 2</h3>
-        <p>Edit this text to describe your second about section. This could be your company history, values, or something else.</p>
+        <h3>Know Your Coach</h3>
+      </div>
+  <main>
+    <section class="about-section">
+      <img src="https://res.cloudinary.com/djgwe16of/image/upload/v1750446163/KQWjXou955k-HD_eis8ut.jpg" alt="About Section 1 Image" class="about-img" />
+      <div class="about-text" contenteditable="true">
+        <h3>Faraz Khan</h3>
+        <p>Hi I am Faraz Khan I have grown a channel from scratch to 200K subscribers while operating in a very niche market. I have generated consistent coaching leads and booked my calendar just using YouTube.
+
+I have spend 10 years of my life figuring out YouTube so that you don't have to. I will help you create you channel's theme, strategize and sell from YouTube.
+
+</p>
+      </div>
+    </section>
+    <section class="about-section">
+      <img src="https://res.cloudinary.com/djgwe16of/image/upload/v1750447228/DSC00041_qswzd6.jpg" alt="About Section 2 Image" class="about-img" />
+      <div class="about-text" contenteditable="true">
+        <h3> Subhadeep Pathak </h3></h3>
+        <p>I am a Video Marketer with 5 years of experience. I help YouTube coaches and consultants to run their backend of the content machine. Working with some of the top creators have helped me understand
+        what ware the ways of minimizing the time spent on time consuming works while maximizing results.</p>
       </div>
     </section>
     <section class="long-editable-section">
