--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   </header>
    </section>
     <section class="about-section">
-      <img src="images/about2.jpg" alt="About Section 2 Image" class="about-img" />
-      <div class="about-text" contenteditable="true">
         <h3>Know Your Coach</h3>
       </div>
   <main>
@@ -40,18 +38,20 @@ I have spend 10 years of my life figuring out YouTube so that you don't have to.
     </section>
     <section class="long-editable-section">
       <div class="long-text" contenteditable="true">
-        <h3>More Information</h3>
+        <h3>How can we help you?</h3>
         <p>
-          This is a long editable text section. You can add lists, screenshots, or any content here.<br>
-          For example:
+         Welcome to our detailed overview of services and capabilities.
+         YouTube Clarity:
         </p>
         <ul>
-          <li>First item</li>
-          <li>Second item</li>
-          <li>Third item</li>
+          <li>Channel Strategy & Positioning</li>
+          <li>2 Strategy calls every week</li>
+          <li>Content Planning & Scripting</li>
+          </li>Ideation, title & Thumbnail strategy</li>
+          </li>Editing Templates + Training to create Professional looking videos</li>
         </ul>
         <p>
-          Below is an additional image (like a screenshot):
+          Below you can find the results we achieved:
         </p>
         <img src="images/end-image.jpg" alt="End Section Image" class="end-img"/>
         <p>
@@ -61,7 +61,7 @@ I have spend 10 years of my life figuring out YouTube so that you don't have to.
     </section>
   </main>
   <footer contenteditable="true">
-    &copy; 2025 Your Company Name
+    &copy; 2025 kafka
   </footer>
   <script src="script.js"></script>
 </body>
